word breaks in messages to avoid overflow

--- a/app/assets/stylesheets/components/supported/_messages.scss
+++ b/app/assets/stylesheets/components/supported/_messages.scss
@@ -1,1 +1,3 @@
-// Messages styles
+.outlook-message-body {
+  word-break: break-word;
+}
